--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,10 @@ a {
 * {
   box-sizing: border-box;
 }
+
+
+button {
+  padding: 0.5rem;
+  border: 1px solid rgba(0,0,0,.1);
+  cursor: pointer;
+}
